# dbt-scooters

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
dbt_scooters_dagster/: pyproject.toml  setup.py
dbt_scooters_dagster/dbt_scooters_dagster/: assets.py  definitions.py  project.py  schedules.py
models/: sources.yml  trips_stat.sql  trips_stat_age.sql  trips_stat_daily.sql
