[project]
name = "dbt-scooters"
version = "0.1.0"
description = "dbt project to prepare and analyze scooter data"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster>=1.12.1",
    "dagster-dbt>=0.28.1",
    "dagster-webserver>=1.12.1",
    "dbt-core>=1.10.16",
    "dbt-postgres>=1.9.1",
]
